# kernels

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  Makefile  README.md
draft/: mma_atom.hpp  tuple_algorithms.hpp
examples/: CMakeLists.txt
examples/divergence/: README.md  divergence.cu  test_divergence.cuh
src/: CMakeLists.txt
src/reduce/: README.md  reduce.cu  reduce_max.cuh  reduce_sum.cuh  reduce_utils.cuh  test_max.cuh  test_sum.cuh
src/sgemm/: README.md  sgemm.cu  sgemm_v1.cuh  sgemm_v2.cuh  sgemm_v2_bit_naive.cuh  sgemm_v2_bitop.cuh  sgemm_v2_naive.cuh  sgemm_v3.cuh  test_sgemm.cuh
src/softmax/: README.md  softmax.cu  softmax_naive.cuh  softmax_oneflow.cuh  softmax_oneflow_block_smem.cuh  softmax_oneflow_warp.cuh  softmax_utils.cuh  test_softmax.cuh
src/transpose/: README.md  test_transpose.cuh  transpose.cu  transpose_cuda_coalesced.cuh  transpose_cuda_conflict_free.cuh  transpose_cuda_naive.cuh  transpose_cute_coalesced.cuh  transpose_cute_conflict_free.cuh  transpose_cute_naive.cuh  transpose_cute_naive_colfax.cuh  transpose_utils.cuh
src/utils/: swizzle.cuh  utils.cuh
